--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,4 @@
+/*NEW TWEETS*/
 main .counter {
   padding-left: 340px;
  }
@@ -26,4 +27,8 @@ main hr {
 main textarea {
   width: 100%;
   height: 60px;
+}
+
+main .error {
+  color: red;
 }
